Add missing dependency to ensure correct version is used (not later version specified in mbs-ide)

--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -44,6 +44,8 @@
     "semver": "^5.4.1",
     "uuid": "^8.0.0",
     "vhost": "^3.0.2",
+    "vscode-uri": "^2.1.1",
+    "vscode-debugprotocol": "^1.32.0",
     "vscode-proxy-agent": "^0.11.0",
     "vscode-textmate": "7.0.1"
   },
