--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -42,6 +42,7 @@
     "semver": "^5.4.1",
     "uuid": "^8.0.0",
     "vhost": "^3.0.2",
+    "vscode-uri": "^2.1.1",
     "vscode-debugprotocol": "^1.32.0",
     "vscode-proxy-agent": "^0.11.0",
     "vscode-textmate": "^4.0.1"
