Add seondary window support for terminals
This work is happening in the context of
https://github.com/eclipse-theia/theia/issues/11643

The main changes are
- Add support for building a "secondary-window.css" file to load in the
  secondary window. Includes markup for marking frontend modules as
  contributing to the sceondary windows
- Add keybinding listeners to secondary windows
- Add color variables to secondary window style (theme support)
- monkey-patch IntersectionObserver handling on Firefox to make terminal
  refresh when in secondary window
- Extend PhosphorJS source patching to work for widget attach/detach

Contributed on behalf of ST Microelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -17,7 +17,10 @@
   },
   "theiaExtensions": [
     {
-      "frontend": "lib/browser/terminal-frontend-module",
+      "frontend": {
+        "path": "lib/browser/terminal-frontend-module",
+        "includeInSecondaryWindow": true
+      },
       "backend": "lib/node/terminal-backend-module"
     }
   ],
