Rework config of secondary window modules as per comments
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -17,10 +17,8 @@
   },
   "theiaExtensions": [
     {
-      "frontend": {
-        "path": "lib/browser/terminal-frontend-module",
-        "includeInSecondaryWindow": true
-      },
+      "frontend": "lib/browser/terminal-frontend-module",
+      "secondaryWindow": "lib/browser/terminal-frontend-module",
       "backend": "lib/node/terminal-backend-module"
     }
   ],
