Upgrade vscode-textmate to ^7.0.3
Breaking changes in vscode-textmate between 7.0.1 and 7.0.3
Replacing pin to version 7.0.1 in
https://github.com/eclipse-theia/theia/commit/bd3db5ec16ab58a93ad90dbcce17e82120523d2d

Contributed by STMicroelectronics

Signed-off-by: Niklas DAHLQUIST <niklas.dahlquist@st.com>
Co-written-by: Samuel HULTGREN <samuel.hultgren@st.com>

--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -45,7 +45,7 @@
     "uuid": "^8.0.0",
     "vhost": "^3.0.2",
     "vscode-proxy-agent": "^0.11.0",
-    "vscode-textmate": "7.0.1"
+    "vscode-textmate": "^7.0.3"
   },
   "publishConfig": {
     "access": "public"
