--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "typedoc-plugin-external-module-map": "1.3.2",
     "typescript": "~4.5.5",
     "uuid": "^8.0.0",
-    "yargs": "^15.3.1"
+    "yargs": "^15.3.1",
+    "nise": "4.0.3"
   },
   "scripts": {
     "all": "yarn -s install && yarn -s lint && yarn -s build",
