ci: make plugin download sequential
The commit updates our CI to run the `download:plugins` script
sequentially to improve rate limiting errors.

Signed-off-by: vince-fugnitto <vincent.fugnitto@ericsson.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -36,7 +36,7 @@ commands:
         component: che-dev
         command: >
           killall node;
-          yarn && yarn build:examples
+          yarn && yarn download:plugins && yarn build:examples
         workdir: /projects/theia
   - name: >
       theia: Launch Browser Backend
