--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,11 +73,24 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install and Build
+      - name: Install
         shell: bash
         run: |
           yarn --skip-integrity-check --network-timeout 100000
           ./scripts/check_git_status.sh
+        env:
+          NODE_OPTIONS: --max_old_space_size=4096
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
+
+      - name: Download Plugins
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          yarn -s download:plugins
+
+      - name: Build
+        shell: bash
+        run: |
           yarn build:examples
           ./scripts/check_git_status.sh
         env:
