ci: replace `xvfb` action
The commit replaces the deprecated (due to inactivity) action for `xvfb`
in favor of using the one provided by default from the latest `ubuntu` runner.

Signed-off-by: vince-fugnitto <vincent.fugnitto@ericsson.com>

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,15 +105,13 @@ jobs:
 
       - name: Test (browser)
         if: matrix.tests != 'skip' && runner.os == 'Linux'
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: yarn browser test
+        run: |
+          xvfb-run -a yarn browser test
 
       - name: Test (electron)
         if: matrix.tests != 'skip' && runner.os == 'Linux'
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: yarn electron test
+        run: |
+          xvfb-run -a yarn electron test
 
   publish:
     needs: build
