--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -68,7 +68,7 @@
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "uuid": "^8.3.2",
-    "vscode-languageserver-protocol": "~3.15.3",
+    "vscode-languageserver-protocol": "^3.17.2",
     "vscode-uri": "^2.1.1",
     "ws": "^7.1.2",
     "yargs": "^15.3.1"
