[example] Pin vscode.markdown-language-features to v1.64.2
Newer published version that will be picked-up now that we support newer API uses a
proposed API that we do not yet have, which prevents the extension from activating:

onWillDropOnTextEditor()

Signed-off-by: Marc Dumais <marc.dumais@ericsson.com>

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   ],
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
+    "vscode.markdown-language-features": "https://open-vsx.org/api/vscode/markdown-language-features/1.64.2/file/vscode.markdown-language-features-1.64.2.vsix",
     "eclipse-theia.builtin-extension-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.64.2/file/eclipse-theia.builtin-extension-pack-1.64.2.vsix",
     "EditorConfig.EditorConfig": "https://open-vsx.org/api/EditorConfig/EditorConfig/0.14.4/file/EditorConfig.EditorConfig-0.14.4.vsix",
     "dbaeumer.vscode-eslint": "https://open-vsx.org/api/dbaeumer/vscode-eslint/2.1.20/file/dbaeumer.vscode-eslint-2.1.20.vsix",
