[tsconfig] Fix the tsconfig.json for packages

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -12,6 +12,12 @@
   "references": [
     {
       "path": "../../dev-packages/application-package"
+    },
+    {
+      "path": "../../dev-packages/private-re-exports"
+    },
+    {
+      "path": "../../dev-packages/request"
     }
   ]
 }
