--- a/examples/playwright/package.json
+++ b/examples/playwright/package.json
@@ -29,7 +29,7 @@
     "src"
   ],
   "dependencies": {
-    "@playwright/test": "1.22.2",
+    "@playwright/test": "^1.30.0",
     "fs-extra": "^9.0.8"
   },
   "devDependencies": {
