--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -11,6 +11,7 @@
     "@theia/core": "1.34.0",
     "@theia/debug": "1.34.0",
     "@theia/editor": "1.34.0",
+    "@theia/editor-preview": "1.34.0",
     "@theia/file-search": "1.34.0",
     "@theia/filesystem": "1.34.0",
     "@theia/markers": "1.34.0",
