--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -18,11 +18,7 @@
     "@theia/workspace": "1.34.0",
     "@vscode/debugprotocol": "^1.51.0",
     "jsonc-parser": "^2.2.0",
-    "mkdirp": "^0.5.0",
-    "p-debounce": "^2.1.0",
-    "requestretry": "^7.0.0",
-    "tar": "^4.0.0",
-    "unzip-stream": "^0.3.0"
+    "p-debounce": "^2.1.0"
   },
   "publishConfig": {
     "access": "public"
@@ -46,11 +42,7 @@
     "url": "https://github.com/eclipse-theia/theia/issues"
   },
   "homepage": "https://github.com/eclipse-theia/theia",
-  "bin": {
-    "download-debug-adapters": "./bin/download-adapters.js"
-  },
   "files": [
-    "bin",
     "lib",
     "src"
   ],
