--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "engines": {
     "yarn": ">=1.7.0 <2",
-    "node": ">=14.18.0"
+    "node": ">=16.14.0 <17"
   },
   "resolutions": {
-    "**/@types/node": "14"
+    "**/@types/node": "16"
   },
   "devDependencies": {
     "@types/chai": "4.3.0",
     "@types/chai-spies": "1.0.3",
     "@types/chai-string": "^1.4.0",
     "@types/jsdom": "^11.0.4",
-    "@types/node": "14",
+    "@types/node": "16",
     "@types/puppeteer": "^2.0.0",
     "@types/sinon": "^10.0.6",
     "@types/temp": "^0.8.29",
