--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "electron-mocha": "^11.0.2",
     "eslint": "7",
     "eslint-plugin-deprecation": "~1.2.1",
-    "eslint-plugin-import": "latest",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-no-null": "latest",
     "eslint-plugin-no-unsanitized": "latest",
     "eslint-plugin-react": "^7.31.10",
@@ -41,10 +41,10 @@
     "improved-yarn-audit": "^3.0.0",
     "jsdom": "^11.5.1",
     "lerna": "^6.0.1",
+    "mkdirp": "^0.5.0",
     "node-gyp": "^9.0.0",
     "nsfw": "^2.2.4",
     "nyc": "^15.0.0",
-    "mkdirp": "^0.5.0",
     "puppeteer": "^2.0.0",
     "puppeteer-to-istanbul": "^1.2.2",
     "rimraf": "^2.6.1",
