--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -42,6 +42,9 @@
       "path": "../../packages/git"
     },
     {
+      "path": "../../packages/hang-backend"
+    },
+    {
       "path": "../../packages/keymaps"
     },
     {
