--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -48,6 +48,9 @@
       "path": "../../packages/git"
     },
     {
+      "path": "../../packages/hang-backend"
+    },
+    {
       "path": "../../packages/keymaps"
     },
     {
