--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,6 +82,9 @@
       "path": "packages/git"
     },
     {
+      "path": "packages/hang-backend"
+    },
+    {
       "path": "packages/keymaps"
     },
     {
