--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -17,6 +17,7 @@
     "@theia/variable-resolver": "1.34.0",
     "@theia/workspace": "1.34.0",
     "@vscode/debugprotocol": "^1.51.0",
+    "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
     "p-debounce": "^2.1.0"
   },
