[plugin-ext] Add file locking to avoid race condition writing to global plugin storage file
Fixes #8384

Added the use of a semaphore to lock access to the global plugin storage file, to avoid it
being accessed in a disorderly fashion, causing potential corruption.

As per the issue discussion, it's possible that there is also a potential race condition
caused by node's write function, not flushing its buffers to disk, but in this specific case,
it was obvious that parallel calls to set() and get() were the main cause of the problems.

Signed-off-by: Marc Dumais <marc.dumais@ericsson.com>

--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -32,6 +32,7 @@
     "@theia/workspace": "1.34.0",
     "@types/mime": "^2.0.1",
     "@vscode/debugprotocol": "^1.51.0",
+    "async-sema" : "^3.1.1",
     "decompress": "^4.2.1",
     "escape-html": "^1.0.3",
     "filenamify": "^4.1.0",
