--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -66,6 +66,9 @@
       "path": "../../packages/navigator"
     },
     {
+      "path": "../../packages/notebook"
+    },
+    {
       "path": "../../packages/outline-view"
     },
     {
