--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,6 +109,9 @@
       "path": "packages/navigator"
     },
     {
+      "path": "packages/notebook"
+    },
+    {
       "path": "packages/outline-view"
     },
     {
