--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -34,6 +34,7 @@
     "@theia/mini-browser": "1.40.0",
     "@theia/monaco": "1.40.0",
     "@theia/navigator": "1.40.0",
+    "@theia/notebook": "1.40.0",
     "@theia/outline-view": "1.40.0",
     "@theia/output": "1.40.0",
     "@theia/plugin-dev": "1.40.0",
