core: introduce `FileSystemLocking`
The native Node file system APIs are powerful but low level: Nothing
prevents bad code from concurrently writing to the same file.

`FileSystemLocking` is meant to be a central component for any method
handling files and wanting to prevent concurrent access by other parts
of the framework.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "@types/yargs": "^15",
     "@vscode/codicons": "*",
     "ajv": "^6.5.3",
+    "async-mutex": "^0.4.0",
     "body-parser": "^1.17.2",
     "cookie": "^0.4.0",
     "dompurify": "^2.2.9",
