basic widget for notebooks working
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/tsconfig.json
+++ b/packages/notebook/tsconfig.json
@@ -7,10 +7,18 @@
   },
   "include": [
     "src"
-  ],
+,
+"src/browser/notebook-cell-resource-resolver.ts"
+],
   "references": [
     {
       "path": "../core"
+    },
+    {
+      "path": "../filesystem"
+    },
+    {
+      "path": "../monaco"
     }
   ]
 }
