--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -3,7 +3,9 @@
   "version": "1.35.0",
   "description": "Theia - Notebook Extension",
   "dependencies": {
-    "@theia/core": "1.35.0"
+    "@theia/core": "1.35.0",
+    "@theia/filesystem": "1.35.0",
+    "@theia/monaco": "1.35.0"
   },
   "publishConfig": {
     "access": "public"
