Enable context isolation and disable nodejs support. Fixes #2018
All access to electron API is now done through an API exposed via a
preload script. Access to the electron API (including electron-remote)
and nodejs API is no longer possible.
Theia extensions can contribute to the preload script
via a `theiaExtensions` module declaration in their package.json

Contributed on behalf or STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -130,6 +130,9 @@
   },
   "theiaExtensions": [
     {
+      "preload": "lib/electron-browser/preload"
+    },
+    {
       "frontend": "lib/browser/i18n/i18n-frontend-module",
       "backend": "lib/node/i18n/i18n-backend-module"
     },
