--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -6,6 +6,7 @@
     "@theia/core": "1.35.0",
     "@theia/editor": "1.35.0",
     "@theia/filesystem": "1.35.0",
+    "@theia/monaco": "1.35.0",
     "@theia/process": "1.35.0",
     "@theia/variable-resolver": "1.35.0",
     "@theia/workspace": "1.35.0",
