feat(Testing API): Migration of the PluginExt part of the VS Code Test API
Project lead: Kevin Clapperton
Developers: Zakaria Diabi, Mathieu Bussières
Testers: Kevin Clapperton, Théo St-Denis

Signed-off-by: Zakaria Diabi  <d.zaki2396@gmail.com>
Signed-off-by: Mathieu Bussières <mathblin@hotmail.com>
Signed-off-by: Théo St-Denis <theo.st-denis@polymtl.ca>
Signed-off-by: Kevin Clapperton <keclapperton@gmail.com>

Co-authored-by: Mathieu Bussières <mathblin@hotmail.com>
Co-authored-by: Théo St-Denis <theo.st-denis@polymtl.ca>
Co-authored-by: Kevin Clapperton <keclapperton@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -166,6 +166,9 @@
       "path": "packages/test"
     },
     {
+      "path": "packages/testing"
+    },
+    {
       "path": "packages/timeline"
     },
     {
