feat(Testing API): Migration of the PluginExt part of the VS Code Test API
Project lead: Kevin Clapperton
Developers: Zakaria Diabi, Mathieu Bussières
Testers: Kevin Clapperton, Théo St-Denis

Signed-off-by: Zakaria Diabi  <d.zaki2396@gmail.com>
Signed-off-by: Mathieu Bussières <mathblin@hotmail.com>
Signed-off-by: Théo St-Denis <theo.st-denis@polymtl.ca>
Signed-off-by: Kevin Clapperton <keclapperton@gmail.com>

Co-authored-by: Mathieu Bussières <mathblin@hotmail.com>
Co-authored-by: Théo St-Denis <theo.st-denis@polymtl.ca>
Co-authored-by: Kevin Clapperton <keclapperton@gmail.com>

--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -26,6 +26,7 @@
     "@theia/search-in-workspace": "1.36.0",
     "@theia/task": "1.36.0",
     "@theia/terminal": "1.36.0",
+    "@theia/testing": "1.36.0",
     "@theia/timeline": "1.36.0",
     "@theia/typehierarchy": "1.36.0",
     "@theia/variable-resolver": "1.36.0",
@@ -39,6 +40,8 @@
     "jsonc-parser": "^2.2.0",
     "lodash.clonedeep": "^4.5.0",
     "macaddress": "^0.2.9",
+    "marked": "^4.0.0",
+    "@types/marked": "^4.0.0",
     "mime": "^2.4.4",
     "ps-tree": "^1.2.0",
     "request": "^2.82.0",
