--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build-and-test-playwright:
-    name: ubuntu-latest,  Node.js 16.x
+    name: Playwright Tests (ubuntu-latest,  Node.js 16.x)
 
     runs-on: ubuntu-latest
     timeout-minutes: 60
