--- a/packages/preferences/package.json
+++ b/packages/preferences/package.json
@@ -11,6 +11,7 @@
     "@theia/userstorage": "1.35.0",
     "@theia/workspace": "1.35.0",
     "async-mutex": "^0.3.1",
+    "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
     "p-debounce": "^2.1.0"
   },
