add problems-widget filter toolbar

--- a/packages/markers/package.json
+++ b/packages/markers/package.json
@@ -4,6 +4,7 @@
   "description": "Theia - Markers Extension",
   "dependencies": {
     "@theia/core": "1.35.0",
+    "@theia/editor": "1.35.0",
     "@theia/filesystem": "1.35.0",
     "@theia/workspace": "1.35.0"
   },
