--- a/packages/filesystem/package.json
+++ b/packages/filesystem/package.json
@@ -15,6 +15,7 @@
     "minimatch": "^5.1.0",
     "multer": "1.4.4-lts.1",
     "rimraf": "^2.6.2",
+    "stat-mode": "^1.0.0",
     "tar-fs": "^1.16.2",
     "trash": "^7.2.0",
     "uuid": "^8.0.0",
