--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -40,7 +40,8 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.35.0"
+    "@theia/ext-scripts": "1.35.0",
+    "@theia/filesystem": "1.35.0"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
