--- a/packages/plugin-ext-vscode/package.json
+++ b/packages/plugin-ext-vscode/package.json
@@ -16,9 +16,7 @@
     "@theia/typehierarchy": "1.36.0",
     "@theia/userstorage": "1.36.0",
     "@theia/workspace": "1.36.0",
-    "@types/request": "^2.0.3",
-    "filenamify": "^4.1.0",
-    "request": "^2.82.0"
+    "filenamify": "^4.1.0"
   },
   "publishConfig": {
     "access": "public"
