Enable workspace file extension customization

--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@theia/core": "1.39.0",
     "@theia/filesystem": "1.39.0",
+    "@theia/monaco-editor-core": "1.72.3",
     "@theia/variable-resolver": "1.39.0",
     "jsonc-parser": "^2.2.0",
     "valid-filename": "^2.0.1"
