use Inversify in Electron preload
This is a rewrite of the preload infrastructure to align the
implementation with the rest of the framework.

This commit breaks up APIs exposed from the preload context into several
Inversify components.

Functionality is now contributed through Inversify `ContainerModule`
instances exposed as `default` export in Theia `preload` contributions.

New typed APIs are wrapping untyped Electron APIs: `TheiaIpcRenderer`,
`TheiaIpcMain`, `TheiaIpcWindow`, `IpcChannel`, `createIpcChannel`,
`createIpcNamespace`.

In order to contribute new APIs from the preload context to the browser
context you should use the `preloadServiceIdentifier<T>(name)` API to
create your Inversify service identifiers and then use the
`bindPreloadApi(bind, yourPreloadServiceId)` API to bind your own
components and have them exposed in the browser context.

Electron doesn't handle instances with prototypes when exposing APIs,
so you may use the `@proxyable() class` and `@proxy() field` APIs
when creating your preload components to expose in the browser context.

Internally the `IpcHandleConverter` is the component that handles
the `@proxyable()` and `@proxy()` metadata to convert objects in an
Electron-friendly way. The `TheiaContextBridge` component wraps
Electron's `contextBridge` API to use this conversion mechanism.

See ./packages/core/ELECTRON-COMMON.md for more details.

Internally, we now use `MessagePorts` to commmunicate between the
browser and main contexts.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -130,7 +130,8 @@
   },
   "theiaExtensions": [
     {
-      "preload": "lib/electron-browser/preload"
+      "preload": "lib/electron-browser/preload/core-preload-module",
+      "frontendElectron": "lib/electron-browser/core-electron-frontend-module"
     },
     {
       "frontend": "lib/browser/i18n/i18n-frontend-module",
