--- a/configs/mocharc.yml
+++ b/configs/mocharc.yml
@@ -1,6 +1,8 @@
 require:
   - 'ignore-styles'
   - 'reflect-metadata/Reflect'
+node-option:
+  - expose-gc
 reporter: 'spec'
 watch-files:
     - '**/*.js'
