Implements "secondary window" support for Electron
Fixes #11642

The main change is to prevent the secondary window from closing until
the extracted widget is removed from the window. This includes waiting
until any close handling (including dialogs) are finished.

To enable this properly, dialog support has been extended to work with
secondary windows, including support for the StylingService in secondary
windows.

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -48,6 +48,7 @@
     "@theia/scm": "1.38.0",
     "@theia/scm-extra": "1.38.0",
     "@theia/search-in-workspace": "1.38.0",
+    "@theia/secondary-window": "1.38.0",
     "@theia/task": "1.38.0",
     "@theia/terminal": "1.38.0",
     "@theia/timeline": "1.38.0",
