Initial implementation of Theia test service
contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -163,6 +163,9 @@
       "path": "packages/terminal"
     },
     {
+      "path": "packages/test"
+    },
+    {
       "path": "packages/timeline"
     },
     {
