--- a/examples/api-samples/package.json
+++ b/examples/api-samples/package.json
@@ -12,6 +12,7 @@
     "@theia/output": "1.42.0",
     "@theia/ovsx-client": "1.42.0",
     "@theia/search-in-workspace": "1.42.0",
+    "@theia/test": "1.39.0",
     "@theia/toolbar": "1.42.0",
     "@theia/vsx-registry": "1.42.0",
     "@theia/workspace": "1.42.0"
