working downloading and unzipping of dependencies
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -139,6 +139,9 @@
       "path": "packages/property-view"
     },
     {
+      "path": "packages/remote"
+    },
+    {
       "path": "packages/scm"
     },
     {
