--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/eslint-plugin-tslint": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
+    "archiver": "5.3.1",
     "chai": "4.3.4",
     "chai-spies": "1.0.0",
     "chai-string": "^1.4.0",
@@ -78,7 +79,7 @@
     "lint:oneshot": "node --max-old-space-size=4096 node_modules/eslint/bin/eslint.js --cache=true \"{dev-packages,packages,examples}/**/*.{ts,tsx}\"",
     "preinstall": "node-gyp install",
     "prepare": "yarn -s compile:references && lerna run prepare && yarn -s compile",
-    "prebuild:native-dependencies": "yarn --cwd dev-packages/native-dependency-build build:dependencies",
+    "prebuild:native-dependencies": "node scripts/build-native-dependencies",
     "publish:latest": "lerna publish --exact --yes --no-push && yarn -s publish:check",
     "publish:next": "lerna publish preminor --exact --canary --preid next --dist-tag next --no-git-reset --no-git-tag-version --no-push --yes && yarn -s publish:check",
     "publish:check": "node scripts/check-publish.js",
