--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -61,16 +61,16 @@
   "scripts": {
     "clean": "theia clean",
     "build": "yarn -s compile && yarn -s bundle",
-    "bundle": "theia build --mode development",
+    "bundle": "yarn rebuild && theia build --mode development",
     "compile": "tsc -b",
     "coverage": "yarn -s test --test-coverage && yarn -s coverage:report",
     "coverage:clean": "rimraf .nyc_output && rimraf coverage",
     "coverage:report": "nyc report --reporter=html",
     "rebuild": "theia rebuild:browser --cacheRoot ../..",
-    "start": "yarn -s rebuild && theia start --plugins=local-dir:../../plugins",
+    "start": "theia start --plugins=local-dir:../../plugins",
     "start:debug": "yarn -s start --log-level=debug",
     "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
-    "test": "yarn -s rebuild && theia test . --plugins=local-dir:../../plugins --test-spec=../api-tests/**/*.spec.js",
+    "test": "theia test . --plugins=local-dir:../../plugins --test-spec=../api-tests/**/*.spec.js",
     "test:debug": "yarn -s test --test-inspect",
     "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
     "watch:bundle": "theia build --watch --mode development",
