--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -61,15 +61,15 @@
   },
   "scripts": {
     "build": "yarn -s compile && yarn -s bundle",
-    "bundle": "theia build --mode development",
+    "bundle": "yarn rebuild && theia build --mode development",
     "clean": "theia clean",
     "compile": "tsc -b",
     "lint": "theiaext lint",
     "rebuild": "theia rebuild:electron --cacheRoot ../..",
-    "start": "yarn -s rebuild && theia start --plugins=local-dir:../../plugins",
+    "start": "theia start --plugins=local-dir:../../plugins",
     "start:debug": "yarn -s start --log-level=debug --remote-debugging-port=9222",
     "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
-    "test": "yarn -s rebuild && electron-mocha --timeout 60000 \"./lib/test/**/*.espec.js\"",
+    "test": "electron-mocha --timeout 60000 \"./lib/test/**/*.espec.js\"",
     "watch": "concurrently --kill-others -n tsc,bundle -c red,blue \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
     "watch:bundle": "theia build --watch --mode development",
     "watch:compile": "tsc -b -w"
