--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/jsdom": "^21.1.1",
     "@types/node": "16",
     "@types/sinon": "^10.0.6",
-    "@types/temp": "^0.8.29",
+    "@types/temp": "^0.9.1",
     "@types/uuid": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/eslint-plugin-tslint": "^4.8.1",
@@ -49,7 +49,7 @@
     "puppeteer-to-istanbul": "^1.4.0",
     "rimraf": "^2.6.1",
     "sinon": "^12.0.0",
-    "temp": "^0.8.3",
+    "temp": "^0.9.1",
     "tslint": "^5.12.0",
     "typedoc": "^0.22.11",
     "typedoc-plugin-external-module-map": "1.3.2",
@@ -61,8 +61,7 @@
     "all": "yarn -s install && yarn -s lint && yarn -s build",
     "browser": "yarn -s --cwd examples/browser",
     "build": "yarn -s compile && yarn -s build:examples",
-    "build-p": "yarn -s compile && lerna run --scope=\"@theia/example-*\" bundle --parallel",
-    "build:examples": "lerna run --scope=\"@theia/example-*\" bundle --parallel",
+    "build:examples": "yarn browser build && yarn electron build",
     "clean": "yarn -s rebuild:clean && yarn -s lint:clean && node scripts/run-reverse-topo.js yarn -s clean",
     "compile": "echo Compiling TypeScript sources... && yarn -s compile:clean && yarn -s compile:tsc",
     "compile:clean": "ts-clean dev-packages/* packages/*",
