--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -32,6 +32,7 @@
     "@theia/workspace": "1.38.0",
     "@types/mime": "^2.0.1",
     "@vscode/debugprotocol": "^1.51.0",
+    "@vscode/proxy-agent": "^0.13.2",
     "decompress": "^4.2.1",
     "escape-html": "^1.0.3",
     "filenamify": "^4.1.0",
@@ -44,7 +45,6 @@
     "semver": "^5.4.1",
     "uuid": "^8.0.0",
     "vhost": "^3.0.2",
-    "vscode-proxy-agent": "^0.12.0",
     "vscode-textmate": "^7.0.3"
   },
   "publishConfig": {
