--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -45,6 +45,7 @@
     "@theia/preview": "1.42.0",
     "@theia/process": "1.42.0",
     "@theia/property-view": "1.42.0",
+    "@theia/remote": "1.42.0",
     "@theia/scm": "1.42.0",
     "@theia/scm-extra": "1.42.0",
     "@theia/search-in-workspace": "1.42.0",
