--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,7 @@
     "@types/dompurify": "^2.2.2",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^4.0.2",
+    "@types/glob": "^8.1.0",
     "@types/lodash.debounce": "4.0.3",
     "@types/lodash.throttle": "^4.1.3",
     "@types/markdown-it": "^12.2.3",
@@ -46,6 +47,7 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "^4.0.2",
     "fuzzy": "^0.1.3",
+    "glob": "^8.1.0",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.0",
     "iconv-lite": "^0.6.0",
@@ -166,6 +168,9 @@
     {
       "backend": "lib/node/request/backend-request-module",
       "backendElectron": "lib/electron-node/request/electron-backend-request-module"
+    },
+    {
+      "backend": "lib/node/remote/backend-remote-module"
     }
   ],
   "keywords": [
