--- a/tsconfig.json
+++ b/tsconfig.json
@@ -145,6 +145,9 @@
       "path": "packages/property-view"
     },
     {
+      "path": "packages/remote"
+    },
+    {
       "path": "packages/scm"
     },
     {
