basic cell rendering in iframes working
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -43,7 +43,8 @@
   "devDependencies": {
     "@theia/ext-scripts": "1.39.0",
     "@theia/filesystem": "1.39.0",
-    "@theia/monaco": "1.39.0"
+    "@theia/monaco": "1.39.0",
+    "@types/vscode-notebook-renderer": "^1.72.0"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
