make sure node-gyp is installed
Using Node 20.x it seems like Yarn complains about missing `node-gyp`.
It will actually shortcut the first call to `yarn install` when it is
missing in order to automatically install it.

Instead we'll explicitly make sure that node-gyp is installed.

--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Build
         shell: bash
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000 --ignore-engines
           yarn build:examples
         env:
