--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install and Build
         shell: bash
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
           ./scripts/check_git_status.sh
         env:
@@ -74,6 +75,7 @@ jobs:
       - name: Install
         shell: bash
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
           ./scripts/check_git_status.sh
         env:
