--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Pre-npm-Publish
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
         env:
           NODE_OPTIONS: --max_old_space_size=4096
