--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "yargs": "^15.3.1"
   },
   "scripts": {
-    "all": "yarn -s install && yarn -s lint && yarn -s build",
+    "all": "yarn -s install && yarn -s build",
     "browser": "yarn -s --cwd examples/browser",
     "build": "yarn -s compile && yarn -s build:examples",
-    "build:examples": "yarn browser build && yarn electron build",
+    "build:examples": "yarn electron build",
     "clean": "yarn -s rebuild:clean && yarn -s lint:clean && node scripts/run-reverse-topo.js yarn -s clean",
     "compile": "echo Compiling TypeScript sources... && yarn -s compile:clean && yarn -s compile:tsc",
     "compile:clean": "ts-clean dev-packages/* packages/*",
