--- a/sample-plugins/sample-namespace/plugin-a/package.json
+++ b/sample-plugins/sample-namespace/plugin-a/package.json
@@ -12,7 +12,7 @@
     "vscode": "^1.50.0"
   },
   "activationEvents": [
-    "onCommand:plugin-a.hello"
+    "onStartupFinished"
   ],
   "devDependencies": {
     "@types/vscode": "^1.50.0"
@@ -26,6 +26,11 @@
       {
         "command": "plugin-a.hello",
         "title": "Hello from plugin-a"
+      }
+    ],
+    "taskDefinitions": [
+      {
+        "type": "mytasktype"
       }
     ]
   }
