implement workbench: startup editor preference
This commit introduces 5 new startup editor preferences:
- none: no editor will be shown on startup
- welcomePage: the default welcome page will be shown on startup
- readme: it will open the folder's readme in preview mode
- newUntitledFile: opens an untitled file on startup
- welcomePageInEmptyWorkbench: only opens the welcome page when opening
  empty workbench

--- a/packages/getting-started/package.json
+++ b/packages/getting-started/package.json
@@ -4,7 +4,10 @@
   "description": "Theia - GettingStarted Extension",
   "dependencies": {
     "@theia/core": "1.40.0",
+    "@theia/editor": "1.40.0",
+    "@theia/filesystem": "1.40.0",
     "@theia/keymaps": "1.40.0",
+    "@theia/preview": "1.40.0",
     "@theia/workspace": "1.40.0"
   },
   "publishConfig": {
