--- a/packages/getting-started/tsconfig.json
+++ b/packages/getting-started/tsconfig.json
@@ -13,7 +13,16 @@
       "path": "../core"
     },
     {
+      "path": "../editor"
+    },
+    {
+      "path": "../filesystem"
+    },
+    {
       "path": "../keymaps"
+    },
+    {
+      "path": "../preview"
     },
     {
       "path": "../workspace"
