basic undo redo for notebook-editor
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@theia/ext-scripts": "1.40.0",
+    "@theia/editor": "1.40.0",
     "@theia/filesystem": "1.40.0",
     "@theia/monaco": "1.40.0",
     "@types/vscode-notebook-renderer": "^1.72.0"
