--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js 16.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
 
       - name: Use Python 3.x
@@ -34,6 +34,7 @@ jobs:
       - name: Install and Build
         shell: bash
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
           ./scripts/check_git_status.sh
         env:
@@ -51,7 +52,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019, ubuntu-latest, macos-11]
-        node: [16.x]
+        node: [16.x, 18.x, 20.x]
 
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
@@ -74,6 +75,7 @@ jobs:
       - name: Install
         shell: bash
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
           ./scripts/check_git_status.sh
         env:
