--- a/.github/workflows/translation.yml
+++ b/.github/workflows/translation.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js 16.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
           registry-url: "https://registry.npmjs.org"
 
       - name: Use Python 3.x
@@ -26,6 +26,7 @@ jobs:
       - name: Install and Build
         shell: bash
         run: |
+          yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
         env:
           NODE_OPTIONS: --max_old_space_size=4096
