--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -19,6 +19,7 @@
     "@theia/monaco": "1.40.0",
     "@theia/monaco-editor-core": "1.72.3",
     "@theia/navigator": "1.40.0",
+    "@theia/notebook": "1.40.0",
     "@theia/output": "1.40.0",
     "@theia/plugin": "1.40.0",
     "@theia/preferences": "1.40.0",
@@ -33,6 +34,7 @@
     "@types/mime": "^2.0.1",
     "@vscode/debugprotocol": "^1.51.0",
     "@vscode/proxy-agent": "^0.13.2",
+    "async-mutex": "^0.4.0",
     "decompress": "^4.2.1",
     "escape-html": "^1.0.3",
     "filenamify": "^4.1.0",
