Plugin test controller implementation and implementation of Test UI
- Adapted plugin-side services to work with Theia test service
- Added views for test runs, results and output
- Built out Test Explorer view
- Added various commands to run tests and manage results

The result is a minimal, but functional UI for working with tests

Fixes #10669

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -51,6 +51,7 @@
     "@theia/secondary-window": "1.42.0",
     "@theia/task": "1.42.0",
     "@theia/terminal": "1.42.0",
+    "@theia/test": "1.42.0",
     "@theia/timeline": "1.42.0",
     "@theia/toolbar": "1.42.0",
     "@theia/typehierarchy": "1.42.0",
