--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../configs/base.tsconfig",
-  "include": [],
+  "include": [ ],
   "compilerOptions": {
     "composite": true
   },
@@ -115,6 +115,9 @@
     },
     {
       "path": "../../packages/terminal"
+    },
+    {
+      "path": "../../packages/test"
     },
     {
       "path": "../../packages/timeline"
