playwright: make all tests executable in electron
* Use unified AppLoader for both electron and browser tests
* Control early window loading of electron via environment variable
  THEIA_ELECTRON_NO_EARLY_WINDOW
* Introduce environment variable USE_ELECTRON to run playwright tests in electron
* Add ui-tests-electron target to package.json
* Adjust workflow to use the new ui-tests-ci target (only one worker +
  both electron and browser tests)
* Merge electron playwright tests into the existing tests
* Skip tests that are currently too flaky in electron:
  - theia-output-view.test.ts
  - theia-quick-command.test.ts

Contributed on behalf of STMicroelectronics

Signed-off-by: Olaf Lessenich <olessenich@eclipsesource.com>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -43,6 +43,15 @@ jobs:
           NODE_OPTIONS: --max_old_space_size=4096
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
 
+      - name: Build Electron
+        shell: bash
+        run: |
+          yarn --skip-integrity-check --network-timeout 100000
+          yarn electron build
+        env:
+          NODE_OPTIONS: --max_old_space_size=4096
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
+
       - name: Build Playwright
         shell: bash
         run: |
@@ -51,4 +60,4 @@ jobs:
       - name: Test (playwright)
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: yarn test:playwright
+          run: yarn --cwd examples/playwright ui-tests-ci 
