Fix monaco localization

--- a/packages/monaco/package.json
+++ b/packages/monaco/package.json
@@ -9,6 +9,7 @@
     "@theia/markers": "1.42.0",
     "@theia/monaco-editor-core": "1.72.3",
     "@theia/outline-view": "1.42.0",
+    "@theia/workspace": "1.42.0",
     "fast-plist": "^0.1.2",
     "idb": "^4.0.5",
     "jsonc-parser": "^2.2.0",
