Introduce timeout for keeping connection contexts alive
Fixes #12823

- refactor front end to allow for multiple reconnections
- remove IWebsockt abstractions
- separate front end connections from service channel management
- introduce mechanism to reconnect front end to existing connection
  context based on timeouts

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -9,8 +9,15 @@
         "applicationName": "Theia Browser Example",
         "preferences": {
           "files.enableTrash": false
-        }
+        },
+        "reloadOnReconnect": true
       }
+    },
+    "backend": {
+      "config": {
+        "frontendConnectionTimeout": 3000
+      }
+
     }
   },
   "dependencies": {
