Implement "headless plugins" in new host outside of frontend connections
- define a 'theiaHeadlessPlugin' engine to identify headless plugins
  that support only the headless plugin host.
  Ordinary backend plugins that also run in the headless host can add
  a 'headless' entry-point in the 'theiaPlugin' object in package.json
- update the Theia application webpack generator to handle packing the
  headless-plugin API init script
- implement a headless entry-point in the PluginModel as a peer to
  frontend and backend entry-points
- factor out common plugin manager behaviour into an abstract class
  - define distinct plugin manager (vscode/theia) and headless plugin
    manager implementations
  - similiarly for the HostedPluginSupport
- define the minimal TerminalExt/Main APIs for access to the default
  shell to support the 'env.shell' API
- implement nested Inversify container for headless plugins to isolate
  them and their plugin host from the connection-scoped plugins
- add examples for headless plugin
  - add a "Greeting of the Day" example custom API provider
  - add a plugin-gotd example headless plugin that uses the custom API
    example to greet the world on activation and also illustrates
    simple vscode API usage

Support headless entrypoint in VSCode plugins

- support the headless entrypoint in an otherwise VS Code plugin
- prefer the VS Code names for start/stop functions
- update the example plugin to use be a dual VSCode/headless plugin
  using the vscode API in the usual backend entrypoint

Support distinct and application-specific headless activation events

- extend the PluginPackage interface to add a "headless" property
  initially defining only an optional "activationEvents" string array
  property for headless mode. The idea being that eventually other
  things like "contributions" might also be defined, here
- support application injection of activation events that it will
  trigger in its plugins via the HeadlessHostedPluginSupport clas

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -20,7 +20,9 @@
     }
   },
   "dependencies": {
+    "@theia/api-provider-sample": "1.45.0",
     "@theia/api-samples": "1.45.0",
+    "@theia/plugin-ext-headless": "1.45.0",
     "@theia/bulk-edit": "1.45.0",
     "@theia/callhierarchy": "1.45.0",
     "@theia/console": "1.45.0",
