--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -84,6 +84,9 @@
       "path": "../../packages/plugin-ext"
     },
     {
+      "path": "../../packages/plugin-ext-headless"
+    },
+    {
       "path": "../../packages/plugin-ext-vscode"
     },
     {
@@ -139,6 +142,9 @@
     },
     {
       "path": "../../packages/workspace"
+    },
+    {
+      "path": "../api-provider-sample"
     },
     {
       "path": "../api-samples"
